--- a/compose/nginx/nginx.conf.template
+++ b/compose/nginx/nginx.conf.template
@@ -5,10 +5,10 @@ events {
 http {
     server {
         listen 80;
+        include /etc/nginx/mime.types;
 
         location / {
             root /usr/share/nginx/html/;
-            include /etc/nginx/mime.types;
             try_files $uri $uri/ /index.html;
         }
 
@@ -30,14 +30,22 @@ http {
             client_max_body_size $CLIENT_MAX_BODY_SIZE;
         }
 
+        location /files/ {
+            return 403;
+        }
 
         location /images/ {
-        # Remove /images/ to /files/
             alias /usr/share/nginx/html/files/;
+            try_files $uri $uri/ =403;
+        }
+
+        location /images/_private_sessions/ {
+            return 403;
         }
 
         location /private/ {  # TODO: secure private session images
             alias /usr/share/nginx/html/files/_private_sessions/;
+            try_files $uri $uri/ =403;
         }
     }
 }
