--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,13 @@ services:
       context: ./server
       dockerfile: ../compose/server/Dockerfile
     image: ocr-server
+    env_file: "server/.env"
     environment:
       FLASK_APP: app
       FLASK_ENV: development
       FLASK_DEBUG: 1
-      ES_URL: http://elasticsearch:9200
+      PYTHONUNBUFFERED: true
+      PYTHONDONTWRITEBYTECODE : true
     command: /app/start
     expose:
       - "5001"  # exposed only to other services
@@ -32,11 +34,13 @@ services:
       context: ./server
       dockerfile: ../compose/worker/Dockerfile
     image: ocr-worker
+    env_file: "server/.env"
     environment:
       CELERY_BROKER_URL: redis://redis:6379/0
       CELERY_RESULT_BACKEND: redis://redis:6379/0
       C_FORCE_ROOT: true
       PYTHONUNBUFFERED: true
+      PYTHONDONTWRITEBYTECODE : true
     command: celery -A celery_app.celery worker --loglevel=debug --without-gossip --without-mingle --without-heartbeat -Ofair -E --hostname=worker1@%h
     volumes:
       - files_data:/app/_files
@@ -92,8 +96,6 @@ services:
     environment:
       NGINX_ENVSUBST_OUTPUT_DIR: /etc/nginx
       CLIENT_MAX_BODY_SIZE: 200M
-      PUBLIC_URL: /ocr/
-      REACT_APP_API_URL: ./api/
       NODE_ENV: development
     restart: unless-stopped
     networks:
