--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
       C_FORCE_ROOT: true
       PYTHONUNBUFFERED: true
       PYTHONDONTWRITEBYTECODE : true
-    command: celery -A celery_app.celery worker --loglevel=debug --without-gossip --without-mingle --without-heartbeat -Ofair -E --hostname=worker1@%h
+    command: celery -A celery_app.celery worker --beat --scheduler redbeat.RedBeatScheduler --loglevel=debug --without-gossip --without-mingle --without-heartbeat -Ofair -E --hostname=worker1@%h
     volumes:
       - files_data:/app/_files
     depends_on:
@@ -50,18 +50,6 @@ services:
     networks:
       - internal-network
       - external-network
-
-  scheduler:
-      image: ocr-worker
-      environment:
-          CELERY_BROKER_URL: redis://redis:6379/0
-          CELERY_RESULT_BACKEND: redis://redis:6379/0
-      command: celery -A celery_app.celery beat --loglevel=debug
-      depends_on:
-          - redis
-      restart: unless-stopped
-      networks:
-          - internal-network
 
   flower:
     image: ocr-worker
