--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
       CELERY_BROKER_URL: redis://redis:6379/0
       CELERY_RESULT_BACKEND: redis://redis:6379/0
       FLOWER_UNAUTHENTICATED_API: true  # authentication managed through Flask
-    command: celery -A celery_app.celery flower --port=5050 --url_prefix="admin/flower"
+    command: celery -A celery_app.celery flower --port=5050 --url_prefix="admin/flower" --enable_events=False
     expose:
       - "5050"  # exposed only to other services
     depends_on:
