--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -41,11 +41,13 @@ services:
       C_FORCE_ROOT: true
       PYTHONUNBUFFERED: true
       PYTHONDONTWRITEBYTECODE : true
-    command: celery -A celery_app.celery worker --loglevel=info --without-gossip --without-mingle --without-heartbeat -Ofair --concurrency=8 -P prefork
+    command: celery -A celery_app.celery worker --beat --scheduler redbeat.RedBeatScheduler  --loglevel=info --without-gossip --without-mingle --without-heartbeat -Ofair -E --concurrency=8 --hostname=worker1@%h -P prefork
     volumes:
       - files_data:/app/_files
     depends_on:
-      - redis
+      redis:
+        condition: service_healthy
+        restart: true
     restart: unless-stopped
     networks:
       - internal-network
@@ -56,11 +58,16 @@ services:
     environment:
       CELERY_BROKER_URL: redis://redis:6379/0
       CELERY_RESULT_BACKEND: redis://redis:6379/0
-    command: celery -A celery_app.celery flower --port=5050
+      FLOWER_UNAUTHENTICATED_API: true  # authentication managed through Flask
+    command: celery -A celery_app.celery flower --port=5050 --url_prefix="admin/flower" --enable_events=False
     expose:
       - "5050"  # exposed only to other services
     depends_on:
-      - redis
+      worker:
+        condition: service_started
+        restart: true
+      redis:
+        condition: service_healthy
     restart: unless-stopped
     networks:
       - internal-network
