--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,11 +41,13 @@ services:
       C_FORCE_ROOT: true
       PYTHONUNBUFFERED: true
       PYTHONDONTWRITEBYTECODE : true
-    command: celery -A celery_app.celery worker --beat --scheduler redbeat.RedBeatScheduler --loglevel=debug --without-gossip --without-mingle --without-heartbeat -Ofair -E --hostname=worker1@%h
+    command: celery -A celery_app.celery worker --beat --scheduler redbeat.RedBeatScheduler --loglevel=debug --without-gossip --without-mingle --without-heartbeat -Ofair -E --concurrency=8 --hostname=worker1@%h -P prefork
     volumes:
       - files_data:/app/_files
     depends_on:
-      - redis
+      redis:
+        condition: service_healthy
+        restart: true
     restart: unless-stopped
     networks:
       - internal-network
@@ -61,7 +63,11 @@ services:
     expose:
       - "5050"  # exposed only to other services
     depends_on:
-      - redis
+      worker:
+        condition: service_started
+        restart: true
+      redis:
+        condition: service_healthy
     restart: unless-stopped
     networks:
       - internal-network
