--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -21,8 +21,10 @@ services:
     depends_on:
       elasticsearch:
         condition: service_healthy
+        restart: true
       redis:
         condition: service_healthy
+        restart: true
     volumes:
       - files_data:/app/_files
     restart: unless-stopped
@@ -35,11 +37,18 @@ services:
       dockerfile: ../compose/worker/Dockerfile
     image: ocr-worker
     env_file: "server/.env"
+    hostname: "${HOSTNAME:-$COMPUTERNAME}"  # set same hostname as host machine; try UNIX, else Windows
     environment:
       C_FORCE_ROOT: true
       PYTHONUNBUFFERED: true
       PYTHONDONTWRITEBYTECODE : true
-    command: celery -A celery_app.celery worker --beat --scheduler redbeat.RedBeatScheduler  --loglevel=info --without-gossip --without-mingle --without-heartbeat -Ofair -E --concurrency=8 --hostname=worker1@%h -P prefork
+    command: celery -A celery_app.celery worker --beat --scheduler redbeat.RedBeatScheduler --loglevel=debug --without-gossip --without-mingle --without-heartbeat -Ofair -E --concurrency=8 --hostname=worker1@%h -P prefork
+    healthcheck:
+        test: celery inspect ping -d worker1@$$HOSTNAME
+        interval: 10s
+        timeout: 10s
+        retries: 3
+        start_period: 10s
     volumes:
       - files_data:/app/_files
     depends_on:
@@ -61,10 +70,11 @@ services:
       - "5050"  # exposed only to other services
     depends_on:
       worker:
-        condition: service_started
+        condition: service_healthy
         restart: true
       redis:
         condition: service_healthy
+        restart: true
     restart: unless-stopped
     networks:
       - internal-network
@@ -76,8 +86,8 @@ services:
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
-      timeout: 30s
-      retries: 15
+      timeout: 10s
+      retries: 10
       start_period: 10s
     volumes:
       - files_data:/app/_files
