IF13 - allow creation and editing of config files
Configs are stored in a new persistent, shared volume

Existing presets are public, with default configuration available at /default-config and list of other available presets at /presets-list.
Any preset can be checked at /config-preset?name={name of preset}

update_data() is renamed to update_json_file() to reflect general use

AdventurousGui/updates-OCR#15

--- a/compose/server/Dockerfile
+++ b/compose/server/Dockerfile
@@ -43,6 +43,10 @@ COPY --from=builder /usr/local/bin/ /usr/local/bin/
 
 COPY --from=builder /app/ /app/
 
+# Copy NEW hardcoded configurations to the configs volume
+# Does not overwrite existing configurations, which may have been edited through the Admin tools
+COPY --from=builder /app/config_files/ /app/_configs/
+
 # Enable venv
 ENV VIRTUAL_ENV=/opt/venv
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
