--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,6 +1,7 @@
 volumes:
   elasticsearch_data: {}
   files_data: {}
+  configs_data: {}
 
 services:
   server:
@@ -27,6 +28,7 @@ services:
         restart: true
     volumes:
       - files_data:/app/_files
+      - configs_data:/app/_configs
     restart: unless-stopped
     networks:
       - internal-network
@@ -51,6 +53,7 @@ services:
         start_period: 10s
     volumes:
       - files_data:/app/_files
+      - configs_data:/app/_configs
     depends_on:
       redis:
         condition: service_healthy
