--- a/website/package.json
+++ b/website/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^5.5.0",
     "react-router": "7.6.2",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.1.17"
+    "styled-components": "^6.1.17",
+    "utif": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
