--- a/website/package.json
+++ b/website/package.json
@@ -11,6 +11,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@mui/utils": "^7.3.1",
     "@mui/x-date-pickers": "^8.9.0",
     "axios": "^1.11.0",
     "dayjs": "^1.11.13",
