--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,7 +83,7 @@ services:
       - internal-network
 
   redis:
-    image: redis:7.2
+    image: redis:8.2.1-alpine3.22
     expose:
       - "6379"  # exposed only to other services
     healthcheck:
