--- a/website/package.json
+++ b/website/package.json
@@ -1,6 +1,6 @@
 {
   "name": "website",
-  "version": "1.3.0a",
+  "version": "1.3.0",
   "private": true,
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
