--- a/website/package.json
+++ b/website/package.json
@@ -3,6 +3,7 @@
   "version": "1.4.0",
   "private": true,
   "dependencies": {
+    "@base-ui-components/react": "^1.0.0-beta.3",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
@@ -21,7 +22,8 @@
     "react-router": "7.6.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.17",
-    "utif": "^3.1.0"
+    "utif": "^3.1.0",
+    "uuid": "^13.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
