place correct .example.env files in server and website folders

--- a/website/.example.env
+++ b/website/.example.env
@@ -1,3 +1,6 @@
-REACT_APP_API_URL=./api/
+PUBLIC_URL = https://example.com/sub-path
+REACT_APP_BASENAME = sub-path
+REACT_APP_API_URL = sub-path/api/
 REACT_APP_HEADER_STYLE = ''
-REACT_APP_ADMIN="?perfil=admin"
+
+GENERATE_SOURCEMAP = false
