hotfix: solve discrepancy between expected filenames and API UUID-based folder name

--- a/server/.example.env
+++ b/server/.example.env
@@ -4,8 +4,11 @@ ES_URL = http://elasticsearch:9200
 
 APP_BASENAME = sub-path
 IMAGE_PREFIX = /sub-path
+
 FILES_PATH = _files
+TEMP_PATH = _pending-files
 PRIVATE_PATH = _files/_private_spaces
+API_TEMP_PATH = _files/_tmp
 
 FLASK_DEBUG = False
 FLASK_SECRET_KEY = (long hex token here, use python's secrets.token_hex())
