reduce default maximum private space age to 1 day

--- a/server/.example.env
+++ b/server/.example.env
@@ -10,6 +10,8 @@ TEMP_PATH = _pending-files
 PRIVATE_PATH = _files/_private_spaces
 API_TEMP_PATH = _files/_tmp
 
+MAX_PRIVATE_SPACE_AGE = 1  # in days
+
 FLASK_DEBUG = False
 FLASK_SECRET_KEY = (long hex token here, use python's secrets.token_hex())
 FLASK_SECURITY_PASSWORD_SALT = (salt here, use python's secrets.SystemRandom().getrandbits(128))
